# teams-export

./: .gitignore  README.md  config.sample.json  pyproject.toml  setup.py
azure/: app-manifest.json  required-resource-accesses.json
src/teams_export/: __init__.py  auth.py  cache.py  cli.py  config.py  dates.py  exporter.py  formatters.py  graph.py  interactive.py
